Fixed routes after moving Wolf Admin templates to pages namespace

--- a/app/views/pages/features/signin.html.erb
+++ b/app/views/pages/features/signin.html.erb
@@ -34,7 +34,7 @@
     <div class="bottom-wrapper">
       <div class="message">
         <span>Don't have an account?</span>
-        <%= link_to "Sign up here", signup_features_path %>.
+        <%= link_to "Sign up here", signup_pages_features_path %>.
       </div>
     </div>
   </div>
