--- a/app/views/pages/features/signup.html.erb
+++ b/app/views/pages/features/signup.html.erb
@@ -44,7 +44,7 @@
     <div class="bottom-wrapper">
       <div class="message">
         <span>Already have an account?</span>
-        <%= link_to "Sign in here", signin_features_path %>.
+        <%= link_to "Sign in here", signin_pages_features_path %>.
       </div>
     </div>
   </div>
