--- a/app/views/pages/forms/new_customer.html.erb
+++ b/app/views/pages/forms/new_customer.html.erb
@@ -100,7 +100,7 @@
 
       <div class="form-group form-actions">
       <div class="col-sm-offset-2 col-sm-10">
-        <%= link_to "Cancel", new_customer_forms_path, class: "btn btn-default" %>
+        <%= link_to "Cancel", new_customer_pages_forms_path, class: "btn btn-default" %>
           <button type="submit" class="btn btn-success">Save customer</button>
       </div>
       </div>
