--- a/app/views/pages/forms/new_product.html.erb
+++ b/app/views/pages/forms/new_product.html.erb
@@ -142,7 +142,7 @@
 
       <div class="form-group form-actions">
       <div class="col-sm-offset-2 col-sm-10 col-md-offset-2 col-md-10">
-        <%= link_to "Cancel", new_product_forms_path, class: "btn btn-default" %>
+        <%= link_to "Cancel", new_product_pages_forms_path, class: "btn btn-default" %>
           <button type="submit" class="btn btn-success">Save product</button>
       </div>
       </div>
