--- a/app/views/pages/forms/wizard.html.erb
+++ b/app/views/pages/forms/wizard.html.erb
@@ -155,7 +155,7 @@
           <h3>
             Your account has been configured successfully!
           </h3>
-          <%= link_to wizard_forms_path, class: "button" do %>
+          <%= link_to wizard_pages_forms_path, class: "button" do %>
             <span>Go to my account</span>
           <% end %>
         </div>
