--- a/app/views/pages/lists/users.html.erb
+++ b/app/views/pages/lists/users.html.erb
@@ -13,7 +13,7 @@
     <input type="text" name="q" placeholder="Search customers, clients..." />
     <input type="submit" />
   </form>
-  <%= link_to new_customer_forms_path, class: "new-user btn btn-success pull-right" do %>
+  <%= link_to new_customer_pages_forms_path, class: "new-user btn btn-success pull-right" do %>
     <span>New user</span>
   <% end %>
 </div>
@@ -90,7 +90,7 @@
           <%= image_tag "avatars/2.jpg" %>
         </div>
         <div class="col-sm-3">
-          <%= link_to "John Smith Stewart", profile_views_path, class: "name" %>
+          <%= link_to "John Smith Stewart", profile_pages_views_path, class: "name" %>
         </div>
         <div class="col-sm-3">
           <div class="email">john.39@gmail.com</div>
@@ -112,7 +112,7 @@
           <%= image_tag "avatars/3.jpg" %>
         </div>
         <div class="col-sm-3">
-          <%= link_to "Richard Moore Stevens", profile_views_path, class: "name" %>
+          <%= link_to "Richard Moore Stevens", profile_pages_views_path, class: "name" %>
         </div>
         <div class="col-sm-3">
           <div class="email">richard@hotmail.com</div>
@@ -134,7 +134,7 @@
           <%= image_tag "avatars/4.jpg" %>
         </div>
         <div class="col-sm-3">
-          <%= link_to profile_views_path, class: "name" do %>
+          <%= link_to profile_pages_views_path, class: "name" do %>
             Karen Jessica Lawrence
             <span class="label label-info">New user</span>
           <% end %>
@@ -159,7 +159,7 @@
           <%= image_tag "avatars/1.jpg" %>
         </div>
         <div class="col-sm-3">
-          <%= link_to "John Smith Stewart", profile_views_path, class: "name" %>
+          <%= link_to "John Smith Stewart", profile_pages_views_path, class: "name" %>
         </div>
         <div class="col-sm-3">
           <div class="email">john.smith@gmail.com</div>
@@ -181,7 +181,7 @@
           <%= image_tag "avatars/5.jpg" %>
         </div>
         <div class="col-sm-3">
-          <%= link_to profile_views_path, class: "name" do %>
+          <%= link_to profile_pages_views_path, class: "name" do %>
             Richard Moore
             <span class="label label-warning">Order pending</span>
           <% end %>
@@ -206,7 +206,7 @@
           <%= image_tag "avatars/6.jpg" %>
         </div>
         <div class="col-sm-3">
-          <%= link_to "Karen Jessica Lawrence", profile_views_path, class: "name" %>
+          <%= link_to "Karen Jessica Lawrence", profile_pages_views_path, class: "name" %>
         </div>
         <div class="col-sm-3">
           <div class="email">lawrence@gmail.com</div>
@@ -228,7 +228,7 @@
           <%= image_tag "avatars/7.jpg" %>
         </div>
         <div class="col-sm-3">
-          <%= link_to "Eric McKellen", profile_views_path, class: "name" %>
+          <%= link_to "Eric McKellen", profile_pages_views_path, class: "name" %>
         </div>
         <div class="col-sm-3">
           <div class="email">eric@gmail.com</div>
@@ -250,7 +250,7 @@
           <%= image_tag "avatars/8.jpg" %>
         </div>
         <div class="col-sm-3">
-          <%= link_to "George Lucas Francois", profile_views_path, class: "name" %>
+          <%= link_to "George Lucas Francois", profile_pages_views_path, class: "name" %>
         </div>
         <div class="col-sm-3">
           <div class="email">george@gmail.com</div>
@@ -272,7 +272,7 @@
           <%= image_tag "avatars/9.jpg" %>
         </div>
         <div class="col-sm-3">
-          <%= link_to "Maria Harrison", profile_views_path, class: "name" %>
+          <%= link_to "Maria Harrison", profile_pages_views_path, class: "name" %>
         </div>
         <div class="col-sm-3">
           <div class="email">maria.01@gmail.com</div>
@@ -294,7 +294,7 @@
           <%= image_tag "avatars/10.jpg" %>
         </div>
         <div class="col-sm-3">
-          <%= link_to profile_views_path, class: "name" do %>
+          <%= link_to profile_pages_views_path, class: "name" do %>
             Butch Robertson
             <span class="label label-info">New user</span>
           <% end %>
@@ -319,7 +319,7 @@
           <%= image_tag "avatars/11.jpg" %>
         </div>
         <div class="col-sm-3">
-          <%= link_to "Richard Dawkins", profile_views_path, class: "name" %>
+          <%= link_to "Richard Dawkins", profile_pages_views_path, class: "name" %>
         </div>
         <div class="col-sm-3">
           <div class="email">dawkins@gmail.com</div>
@@ -341,7 +341,7 @@
           <%= image_tag "avatars/12.jpg" %>
         </div>
         <div class="col-sm-3">
-          <%= link_to "Andrea Kotrevzka", profile_views_path, class: "name" %>
+          <%= link_to "Andrea Kotrevzka", profile_pages_views_path, class: "name" %>
         </div>
         <div class="col-sm-3">
           <div class="email">andrea@gmail.com</div>
@@ -363,7 +363,7 @@
           <%= image_tag "avatars/13.jpg" %>
         </div>
         <div class="col-sm-3">
-          <%= link_to "Robert Diaz", profile_views_path, class: "name" %>
+          <%= link_to "Robert Diaz", profile_pages_views_path, class: "name" %>
         </div>
         <div class="col-sm-3">
           <div class="email">robert.diaz@gmail.com</div>
