--- a/app/views/pages/views/projects.html.erb
+++ b/app/views/pages/views/projects.html.erb
@@ -9,7 +9,7 @@
     My Projects
     <small class="hidden-xs">(Widget list concept)</small>
   </div>
-  <%= link_to new_product_forms_path, class: "new-user btn btn-success pull-right" do %>
+  <%= link_to new_product_pages_forms_path, class: "new-user btn btn-success pull-right" do %>
     <span>Add project</span>
   <% end %>
 </div>
