--- a/app/views/pages/pricing/charts.html.erb
+++ b/app/views/pages/pricing/charts.html.erb
@@ -43,7 +43,7 @@
               Transaction fee
             </div>
           </div>
-          <a class="button" href="<%= form_pricing_index_path %>">
+          <a class="button" href="<%= form_pages_pricing_index_path %>">
             <span>Start free trial</span>
           </a>
         </div>
@@ -79,7 +79,7 @@
               Transaction fee
             </div>
           </div>
-          <a class="button" href="<%= form_pricing_index_path %>">
+          <a class="button" href="<%= form_pages_pricing_index_path %>">
             <span>Start free trial</span>
           </a>
         </div>
@@ -114,7 +114,7 @@
               Transaction fee
             </div>
           </div>
-          <a class="button" href="<%= form_pricing_index_path %>">
+          <a class="button" href="<%= form_pages_pricing_index_path %>">
             <span>Start free trial</span>
           </a>
         </div>
@@ -123,7 +123,7 @@
     <div class="row message">
       <p>
         All of our plans come with a 30 day trial with no credit card required, we also offer a
-        <%= link_to "free plan", form_pricing_index_path %>.
+        <%= link_to "free plan", form_pages_pricing_index_path %>.
       </p>
     </div>
     <div class="row faq">
