--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,23 +8,49 @@
 // compiled file so the styles you add here take precedence over styles defined in any styles
 // defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 // file per style scope.
-//
-//= require_self
-//= require font-awesome
-//= require ionicons
-//= require bootstrap
-//= require bootstrap-switch
-//= require bootstrap-datepicker/bootstrap-datepicker
-//= require bootstrap-daterangepicker/daterangepicker-bs3
-//= require select2
-//= require fullcalendar
-//= require messenger
-//= require animate-css
-//= require jquery-minicolors
-//= require jquery-datatables
-//= require jquery-raty/lib/jquery.raty
-//= require highlightjs
-//= require offline
-//= require summernote
-//= require tether-shepherd
-//= require theme
+
+
+// config variables
+@import "partials/config";
+
+// modules
+@import "modules/mixins";
+@import "modules/elements";
+
+// snippets
+@import "partials/snippets/custom_animations";
+
+// vendor
+@import "libs";
+@import "bootstrap/bootstrap-overrides";
+
+// layout
+@import "partials/layout";
+
+// pages
+@import "partials/pages/index";
+@import "partials/pages/users";
+@import "partials/pages/form";
+@import "partials/pages/form_product";
+@import "partials/pages/invoice";
+@import "partials/pages/calendar";
+@import "partials/pages/sidebar";
+@import "partials/pages/projects";
+@import "partials/pages/reports";
+@import "partials/pages/reports_alt";
+@import "partials/pages/pricing";
+@import "partials/pages/pricing_alt";
+@import "partials/pages/billing_form";
+@import "partials/pages/docs";
+@import "partials/pages/user_profile";
+@import "partials/pages/latest_activity";
+@import "partials/pages/status";
+@import "partials/pages/search";
+@import "partials/pages/signup";
+@import "partials/pages/signin";
+@import "partials/pages/account";
+@import "partials/pages/ui";
+@import "partials/pages/gallery";
+@import "partials/pages/steps";
+@import "partials/pages/wizard";
+@import "partials/pages/email_templates";
