Unified CSS and JS assets structure
content of pages directory moved one level up

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,46 +11,46 @@
 
 
 // config variables
-@import "partials/config";
+@import "config";
 
 // modules
 @import "modules/mixins";
 @import "modules/elements";
 
 // snippets
-@import "partials/snippets/custom_animations";
+@import "snippets/custom_animations";
 
 // vendor
 @import "libs";
 @import "bootstrap/bootstrap-overrides";
 
 // layout
-@import "partials/layout";
+@import "layout";
 
 // pages
-@import "partials/pages/index";
-@import "partials/pages/users";
-@import "partials/pages/form";
-@import "partials/pages/form_product";
-@import "partials/pages/invoice";
-@import "partials/pages/calendar";
-@import "partials/pages/sidebar";
-@import "partials/pages/projects";
-@import "partials/pages/reports";
-@import "partials/pages/reports_alt";
-@import "partials/pages/pricing";
-@import "partials/pages/pricing_alt";
-@import "partials/pages/billing_form";
-@import "partials/pages/docs";
-@import "partials/pages/user_profile";
-@import "partials/pages/latest_activity";
-@import "partials/pages/status";
-@import "partials/pages/search";
-@import "partials/pages/signup";
-@import "partials/pages/signin";
-@import "partials/pages/account";
-@import "partials/pages/ui";
-@import "partials/pages/gallery";
-@import "partials/pages/steps";
-@import "partials/pages/wizard";
-@import "partials/pages/email_templates";
+@import "pages/index";
+@import "pages/users";
+@import "pages/form";
+@import "pages/form_product";
+@import "pages/invoice";
+@import "pages/calendar";
+@import "pages/sidebar";
+@import "pages/projects";
+@import "pages/reports";
+@import "pages/reports_alt";
+@import "pages/pricing";
+@import "pages/pricing_alt";
+@import "pages/billing_form";
+@import "pages/docs";
+@import "pages/user_profile";
+@import "pages/latest_activity";
+@import "pages/status";
+@import "pages/search";
+@import "pages/signup";
+@import "pages/signin";
+@import "pages/account";
+@import "pages/ui";
+@import "pages/gallery";
+@import "pages/steps";
+@import "pages/wizard";
+@import "pages/email_templates";
