Fixed fonts antialiasing

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -1,6 +1,6 @@
 body {
   font-family: $sourceSans;
-  font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
   background: #fff;
 
   &.open-sidebar {
