--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,38 @@
-<h2>Sign up</h2>
+<%= content_for :body_class, "sign_up" %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+<%= link_to fa_icon('users'), root_url, class: "logo" %>
+<h3>Create Your Account Now</h3>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<div class="content">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= devise_error_messages! %>
+    
+    <div class="fields">
+      <%= f.label :email, "Your email" %>
+      <%= f.email_field :email, class: "form-control", placeholder: "Email" %>
+    </div>
+    
+    <div class="fields">
+      <%= f.label :password, "New password" %><br />
+      <%= f.password_field :password, autofocus: true, autocomplete: "off", class: "form-control", placeholder: "Password" %>
+    </div>
+
+    <div class="fields">
+      <%= f.label :password_confirmation, "Confirm new password" %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "Confirm password" %>
+      <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+      <% end %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit "Sign up", class: "btn btn-success btn-lg" %>
+    </div>
+  <% end %>
+</div>
+
+<div class="bottom-wrapper">
+  <div class="message">
+    <%= render "devise/shared/links" %>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
