--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,17 @@
-<p>Hello <%= @resource.email %>!</p>
+<h4 class="heading">Hello <strong><%= @resource.email %></strong>!</h4>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p class="info">Someone has requested a link to change your password. You can do this through the link below.</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<center>
+<table class="button verify-button">
+  <tr align="left">
+    <td align="center">
+      <%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %>
+    </td>
+  </tr>
+</table>
+</center>
 
+<p class="info"></p>
 <p>If you didn't request this, please ignore this email.</p>
 <p>Your password won't change until you access the link above and create a new one.</p>
