--- a/app/views/layouts/_mailer_header.html.erb
+++ b/app/views/layouts/_mailer_header.html.erb
@@ -6,12 +6,9 @@
           <tr>
             <td class="wrapper last">
               <table class="twelve columns">
-                <tr>
-                  <td class="six sub-columns">
-                    <img src="http://placehold.it/200x50">
-                  </td>
-                  <td class="six sub-columns last" align="right" style="text-align:right; vertical-align:middle;">
-                    <span class="template-label">Wolf Admin</span>
+                <tr align="left">
+                  <td class="center" align="center" valign="top">
+                    <span class="logo">Wolf Admin</span>
                   </td>
                   <td class="expander"></td>
                 </tr>
