--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,15 @@
-<p>Hello <%= @resource.email %>!</p>
+<h4 class="heading">Hello <strong><%= @resource.email %></strong>!</h4>
 
 <p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
 
-<p>Click the link below to unlock your account:</p>
+<p class="info">Click the link below to unlock your account.</p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<center>
+<table class="button verify-button">
+  <tr align="left">
+    <td align="center">
+      <%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %>
+    </td>
+  </tr>
+</table>
+</center>
